# HelixAgent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DailyLog.md  Dockerfile  Examples  Final Helm Chart Structure  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  values.yaml
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  release.yml  security.yml
.github/workflows/.github/workflows/: agent-daily-log.yml
agent/: agent_core.py  reporter.py
agent/cpp/: vector.cpp
agent/java/: .gitkeep
agent/tools/: sagemaker_job.py  snowflake_query.py  web_search.py
api/: main.py  monitoring.py
architecture/: index.html
config/: config.yaml
docs/: architecture.md  metrics.md  observability.md
examples/: inference_demo.ipynb  monitoring_demo.ipynb  quickstart.ipynb
examples/examples/: training_demo.ipynb
github/: PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
github/workflows/: ci.yml
helm/: Chart.yaml  configmap.yaml  deployment.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  service.yaml
infra/ansible/: deploy.yml
infra/helm/agentic-ai-assistant/: Chart.yaml  values.yaml
infra/terraform/: main.tf
java/: pom.xml
java/src/com/trojan/ai/: Planner.java
metrics/: index.html
monitoring/: grafana-dashboard.json
observability/: index.html
search/: search_index.json
src/: __init__.py  data_ingest.py  main.py
src/utils/: logger.py  tracker.py
tests/: test_data_ingest.py
(+4 files in other folders)
