[project]
name = "helixagent"
version = "1.0.0"
description = "Modular AI agent framework for automation, reasoning, and decision-making."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Corey Leath" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.coverage.run]
source = ["src", "api"]
omit = ["tests/*"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 99

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]
